# graph-rdfa-processor

./: .gitattributes  .nvim-dap.lua  Cargo.toml  LICENSE  README.md  TODO.md  index.html
.github/workflows/: gh-page.yml  latest.yml  release-wasm-web.yml  release-wasm.yml
doc/: 000-resource-and-about.md  001-property-and-rel.md
examples/: example10.html  example11.html  example15.html  example19.html  example22.html  example23.html  example24.html  example25.html  example27.html  example6.html  example7.html
examples/earl_html5/: example0001.html  example0006.html  example0007.ttl  example0008.ttl  example0009.html  example0010.html  example0014.ttl  example0015.html  example0015.ttl  example0017.html  example0020.html  example0025.ttl  example0026.html  example0027.ttl  example0029.ttl  example0030.html  example0030.ttl  example0032.html  example0032.ttl  example0034.ttl  example0036.ttl  example0038.html  example0048.ttl  example0050.html  example0051.html  example0051.ttl  example0053.html  example0053.ttl  example0054.html  example0054.ttl  example0055.ttl  example0056.ttl  example0057.ttl  example0059.ttl  example0063.ttl  example0064.ttl  example0067.html  example0067.ttl  example0068.html  example0068.ttl  (+67 more)
examples/rdfa_core/: example002.ttl  example081.html  example083.ttl  example084.html  example084.ttl  example088.html  example091.ttl  example094.html  example094.ttl  example094b.ttl  example107.ttl  example107b.html  example107b.ttl  example108.ttl  example111.html  example111.ttl  example113.html  example117.html  example117.ttl  example123.ttl  example124.html  example124.ttl  example126.html  example127.html  example127b.html  example127b.ttl  example129.ttl  make_example.sh
examples/rdfa_primer/: example02.html  example04.html  example04.ttl  example06.ttl  example07.ttl  example08.html  example08.ttl  example10.ttl  example11.ttl  example17.html  example17.ttl  example18.html  example18.ttl  example19.html  example19.ttl  example20.html  example20.ttl  example22.ttl  example23.ttl  example24.ttl  example25.ttl  example26.html  example26.ttl  example27.ttl  example28.html  example28.ttl  example29.ttl  example31.ttl  example32.html  example32.ttl  example33.ttl  example35.ttl  example36.ttl  example39.html  example39.ttl  example40.ttl  example41.html  example41.ttl  example42.ttl  example43.html  (+6 more)
lib-rdfa/: Cargo.toml
lib-rdfa/examples/earl_html5/: example0006.ttl  example0007.html  example0008.html  example0009.ttl  example0010.ttl  example0014.html  example0017.ttl  example0018.html  example0018.ttl  example0020.ttl  example0021.html  example0021.ttl  example0023.html  example0025.html  example0027.html  example0029.html  example0031.html  example0033.html  example0033.ttl  example0034.html  example0036.html  example0037.html  example0037.ttl  example0039.ttl  example0048.html  example0049.html  example0050.ttl  example0052.html  example0052.ttl  example0055.html  example0056.html  example0056.ttl  example0057.html  example0057.ttl  example0059.html  example0059.ttl  example0060.html  example0060.ttl  example0063.html  example0064.html  (+69 more)
lib-rdfa/examples/other/: example0001.html  example0001.ttl  example0002.html  example0002.ttl  example0003.html  example0003.ttl  example0004.html  example0004.ttl  example0005.html  example0005.ttl  example0006.html  example0006.ttl  example0007.html  example0007.ttl  example0008.html  example0008.ttl  example0009.html  example0009.ttl  example0010.html  example0010.ttl  example0011.html  example0011.ttl  example0012.html  example0012.ttl  example0013.html  example0013.ttl  example0014.html  example0014.ttl  example0015.html  example0015.ttl  example0016.html  example0016.ttl  example0017.html  example0017.ttl  example0018.html  example0018.ttl  example0019.html  example0019.ttl  example0020.html  example0020.ttl  (+16 more)
lib-rdfa/examples/rdfa_core/: example002.html  example002.ttl  example081.ttl  example082.html  example082.ttl  example083.html  example088.ttl  example091.html  example094b.html  example106.html  example106.ttl  example107.html  example107b.ttl  example108.html  example108.ttl  example113.ttl  example118.html  example118.ttl  example123.html  example127.ttl  example129.html
lib-rdfa/examples/rdfa_primer/: example04.ttl  example08.ttl  example09.html  example09.ttl  example18.ttl  example22.ttl  example23.ttl  example24.ttl  example27.ttl  example28.ttl  example29.html  example29.ttl  example30.html  example31.html  example31.ttl  example33.html  example35.html  example35.ttl  example36.html  example36.ttl  example40.html  example40.ttl  example41.ttl  example42.html  example42.ttl  example43.ttl  example44.html  example44.ttl
lib-rdfa/src/: constants.rs  lib.rs  rdfa_elt.rs  structs.rs
lib-rdfa/src/tests/: bug.rs  earl_html5.rs  mod.rs  other.rs  rdfa_primer.rs
rdfa-wasm/: Cargo.toml  README.md  app.js  index.html  style.css
rdfa-wasm/pkg/: README.md  package.json  rdfa_wasm.d.ts  rdfa_wasm.js  rdfa_wasm_bg.js  rdfa_wasm_bg.wasm  rdfa_wasm_bg.wasm.d.ts
rdfa-wasm/src/: lib.rs
src/: constants.rs  lib.rs  main.rs  rdfa_elt.rs  structs.rs  test-page.html  utils.rs
src/tests/: earl_html5.rs  mod.rs  rdfa_core.rs  rdfa_prime.rs  rdfa_primer.rs
