[workspace]
members = ["lib-rdfa", "rdfa-wasm"]
resolver = "2"

[workspace.package]
version = "0.1.3"
authors = ["Nordine Bittich"]
description = "Graph rdfa Processor"
documentation = "https://github.com/nbittich/graph-rdfa-processor"
repository = "https://github.com/nbittich/graph-rdfa-processor"
rust-version = "1.83"
edition = "2021"
license = "MIT"

[workspace.dependencies]
log = "0.4.22"
itertools = "0.13.0"
lazy_static = "1.5.0"
scraper = "0.21.0"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }
regex = "1.11.1"
ego-tree = "0.9.0"
# some tests must run sequentially. 
# if library is broken, alternative is: cargo test -- --test-threads 1
graph-rdfa-processor = { version = "0.1.3", path='./lib-rdfa' }

serial_test = "3.2.0"
test-case = "3.3.1"
env_logger = "0.11.5"
tortank = "0.24.2"
wasm-bindgen = "0.2.99"
[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Link Time Optimization (LTO)
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort'   # removes the need for this extra unwinding code.
strip = "symbols"
