[package]
name = "rdfa-wasm"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
graph-rdfa-processor.workspace = true
wasm-bindgen.workspace = true
