[package]
name = "rdfa-wasm"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["console_error_panic_hook","lol_alloc"]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
graph-rdfa-processor.workspace = true
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
lol_alloc={workspace=true,optional=true}
